# Hackaton

./: .env.example  .gitignore  .opencode.json  .pre-commit-config.yaml  LICENSE  README.md  README.md.bk  context.md  manage.py  pyproject.toml
.cursor/: hooks.json
backend/: README.md  jwt_auth.py  main.py  pyproject.toml  settings.py
backend/cache/: __init__.py  store.py  ttl.py
backend/domain/: __init__.py  inference.py  magnitudes.py  mvp_data.py  report_templates.py  stats.py
backend/persistence/: __init__.py  analytics_repo.py  maintenance_repo.py  stats_repo.py  supabase_rest.py
backend/providers/: __init__.py  adapters.py  base.py  deye_live.py  deye_mock.py
backend/routers/: __init__.py  ingest.py  mvp.py  reports.py  stats.py
backend/schemas/: __init__.py  ingest.py  stats.py
backend/security/: __init__.py  ingest_key.py
backend/templates/reports/: simplified.tex  technical.tex
backend/tests/: conftest.py  test_health.py  test_http_upstream_error_contract.py  test_jwt_auth.py  test_tinku_support.py
backend/tests/fixtures/: tinku_endpoints.yaml
backend/tests/fixtures/tinku_snapshots/: README.md
backend/tests/fixtures/tinku_snapshots/deye/: device_latest.json  device_list.json  station_history.json  station_list.json
backend/tests/fixtures/tinku_snapshots/growatt/: device_list.json  plant_list.json
backend/tests/fixtures/tinku_snapshots/huawei/: getDevList.json  getDevRealKpi.json  getStationList.json
backend/tests/integration/: test_cache_ttl.py  test_deye_mock_provider.py  test_electrical_health_route.py  test_inference_from_deye_snapshot.py  test_ingest_e2e.py  test_ingest_route.py  test_mvp_endpoints.py  test_reports_pdf.py  test_stats_route.py  test_supabase_rest_repo.py
backend/tests/tinku/: __init__.py  support.py  test_fetch_snapshots.py  test_middleware_http_errors.py  test_offline_snapshots.py
backend/tests/unit/: test_electrical_health.py  test_inference_normalize_batch.py  test_inference_rules.py  test_ingest_key_constant_time.py  test_magnitude_mapper_multi_provider.py  test_provider_adapters.py  test_rls_sql_contracts.py  test_schemas_ingest.py  test_stats_aggregation.py  test_ttl_cache.py
docs/: AGENTS.md  API_SPEC.md  API_SPEC.yml  ARCHITECTURE.md  CONVENTIONS.md  DATABASE.md  DEVELOPMENT.md  ENVIRONMENT.md  MOCK_DATA.md  README.md  REPORTS_PDF.md  TASKS.md  TEST.md  TINKU_MIDDLEWARE_API.yml  USER_FLOWS.md  (+1 more)
(+291 files in other folders)
