[project]
name = "hackathon-rootwave"
version = "0.0.0"
requires-python = ">=3.13"
description = "Monorepo Rootwave — Python tooling centralizado"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".cursor/skills"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
exclude = "(^\\.cursor/skills/)"

[tool.bandit]
exclude_dirs = [
  ".cursor/skills",
  ".git",
  "node_modules",
  "frontend/node_modules",
  ".venv",
  "venv",
  "dist",
  "build",
]
