[project]
name = "hackathon-rootwave"
version = "0.0.0"
requires-python = ">=3.13"
description = "Monorepo Rootwave — raíz solo para tooling (ruff/mypy/bandit). Código Python de la API en backend/ cuando exista; datos mayormente vía Supabase."

# Raíz del monorepo: no es un paquete instalable. Evita que setuptools descubra
# backend/, frontend/, supabase/ como top-level packages al hacer `uv sync`.
[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".cursor/skills"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
exclude = "(^\\.cursor/skills/)"

[tool.bandit]
exclude_dirs = [
  ".cursor/skills",
  ".git",
  "node_modules",
  "frontend/node_modules",
  ".venv",
  "venv",
  "dist",
  "build",
]
